# tl_proj_template

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_Post.cmake  README.md  clean.sh  setup.sh  setup_release.sh  tl_include_common.cmake
cmake/: superbuild.cmake
include/: CMakeLists.txt
include/tl_proj_template/: CMakeLists.txt  temp.h  tloc.cpp
include/tl_proj_template_tests/: CMakeLists.txt
proj/: CMakeLists.txt
src/: temp.cpp
